[package]
name = "dnstap"
version = "0.1.5"
description = "An implementation of the dnstap protocol"
authors = ["Frank Denis <github@pureftpd.org>"]
keywords = ["dns"]
readme = "README.md"
license = "ISC"
homepage = "https://github.com/jedisct1/rust-dnstap"
repository = "https://github.com/jedisct1/rust-dnstap"
categories = ["encoding", "network-programming", "value-formatting"]
edition = "2018"

[badges]
travis-ci = { repository = "jedisct1/rust-dnstap" }

[dependencies]
framestream = "0.1.4"
mio = "0.6"
protobuf = "2.8"

[build-dependencies]
protobuf-codegen-pure = "2"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
