[package]
name = "dnstap"
version = "0.1.7"
description = "An implementation of the dnstap protocol"
authors = ["Frank Denis <github@pureftpd.org>"]
keywords = ["dns"]
readme = "README.md"
license = "ISC"
homepage = "https://github.com/jedisct1/rust-dnstap"
repository = "https://github.com/jedisct1/rust-dnstap"
categories = ["encoding", "network-programming", "value-formatting"]
edition = "2018"

[badges]
travis-ci = { repository = "jedisct1/rust-dnstap" }

[dependencies]
framestream = "0.2.4"
mio = "1.0"
protobuf = "3.0.1"

[build-dependencies]
protobuf-codegen = "3.0.1"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
